rakuten/namespace-protection/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: robin-system
  labels:
    freeze: "true"
