rakuten/namespace-protection/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: namespace-protection
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../namespace-protection.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: namespace-protection
          spec:
            validationFailureAction: Enforce
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: ns.yaml
  - name: step-03
    try:
    - script:
        content: |
          set +e
          kubectl delete -f ns.yaml
          exit 0
